--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -18,6 +18,14 @@
         margin: 0;
       }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8QHPCVR26"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-V8QHPCVR26');
+    </script>
   </head>
   <body>
     <div id="root"></div>
